--- a/public/css/register.css
+++ b/public/css/register.css
@@ -5,7 +5,9 @@
     font-family: 'Chivo Mono', monospace;
 }
 
-
+/*////////////////////////////////////////////////////////////*/
+/*///////////////////  Register //////////////////////////////*/
+/*////////////////////////////////////////////////////////////*/
 
 main {
     /*
@@ -37,16 +39,17 @@ main {
 .campo {
     display: block;
     margin-bottom: 2rem;
-    padding-left: 0.75rem;
+    /* padding-left: 0.25rem; */
     width: 100%;
     background-color: #ffffff;
     border-radius: 4px;
 }
 
 .campo input {
-    width: 100%;
+    width: 100%; 
     /* height: 100%; */
-    padding: 0.75rem 0;
+    padding: 0.75rem 0.5rem;
+    margin: 0.25rem 0 ;
 }
 
 input {
