--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <%- include('../partials/head', {title: 'Login'}) %>
@@ -16,17 +16,21 @@
 
 <%- include('../partials/header', {title: 'Login'}) %>    
 
+
 <div class="container" style="margin-top: 40px;">
     <div class="row">
-        <h2> Hi <%=users.fullName%> </h2>
-        <img src ="/public/images/avatars/<%=users.avatar %>">
-        <br>
-        <br>
-        <div class="alert alert-success"><%users.email%></div>
+        <h1> Bienvenido a tu sesión: <%= userLogged.fullName %> </h1>
+        <h2> Te compartimos tus datos: </h2>
+        <h3> Tu ID de usuario: <%= userLogged.id %> </h3>
+        <h3> Tu usuario: <%= userLogged.user %> </h3>
+        <h3> Tu email: <%= userLogged.email %> </h3>
+        <h3> Tu avatar: <%= userLogged.avatar %> </h3>
     </div>
+  </div>
+
+<div class="row">
+    <a href="/users/logout" class="btn btn-danger">Cerrar sesión</a>
 </div>
-
-
 
 
 <!-- ***********************************************************************
