--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,7 @@
         <div class="menu-store">
                     <p class="item-menu"><a href="/">Home</a></p>
                     <p class="item-menu"><a href="/products">Catálogo</a></p>
-                    <p class="item-menu"><a href="productCart">Mis Compras</a></p>
+          <!--          <p class="item-menu"><a href="productCart">Mis Compras</a></p>-->
         </div>
 
         <div class="egamers-logo">
@@ -38,7 +38,7 @@
         </div>
 
     </div>
-
+ <!--  
 
     <div class="search-container">
 
@@ -48,7 +48,7 @@
         </form>
 
     </div>
-    
+-->   
 
     
 </header>
