--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -7,41 +7,44 @@
 
 <%- include('../partials/head', {title: 'Login'}) %>
 
-<body>
-    
-
 <!--***********************************************************************
-                        Header 
+                    Header 
 ************************************************************************-->
 
-<%- include('../partials/header', {title: 'Login'}) %>    
+<%- include('../partials/header', {title: 'Login'}) %>
 
 
-<div class="container" style="margin-top: 40px;">
-    <div class="row">
-        <h1> Bienvenido a tu sesión: <%= userLogged.fullName %> </h1>
-        <h2> Te compartimos tus datos: </h2>
-        <h3> Tu ID de usuario: <%= userLogged.id %> </h3>
-        <h3> Tu usuario: <%= userLogged.user %> </h3>
-        <h3> Tu email: <%= userLogged.email %> </h3>
-        <h3> Tu avatar: <%= userLogged.avatar %> </h3>
+<div class="container">
+    <div class="profile-section">
+        <h1 class="profile-title">Bienvenido a tu sesión: <%= userLogged.fullName %></h1>
+        <div class="profile-info">
+            <div class="profile-info-item">
+                <h2 class="profile-info-title">ID de usuario:</h2>
+                <p class="profile-info-text"><%= userLogged.id %></p>
+            </div>
+            <div class="profile-info-item">
+                <h2 class="profile-info-title">Usuario:</h2>
+                <p class="profile-info-text"><%= userLogged.user %></p>
+            </div>
+            <div class="profile-info-item">
+                <h2 class="profile-info-title">Email:</h2>
+                <p class="profile-info-text"><%= userLogged.email %></p>
+            </div>
+            <div class="profile-info-item">
+                <h2 class="profile-info-title">Avatar:</h2>
+                <img class="profile-avatar" src="/images/avatars/<%= userLogged.avatar %>" alt="Avatar">
+            </div>
+        </div>
     </div>
-  </div>
-
-<div class="row">
-    <a href="/users/logout" class="btn btn-danger">Cerrar sesión</a>
+    <div class="logout-section">
+        <a href="/users/logout" class="btn btn-danger">Cerrar sesión</a>
+    </div>
 </div>
 
-
 <!-- ***********************************************************************
-                        Footer 
+                    Footer 
 ************************************************************************ -->
 
-    
-        
 <!-- footer -->
 <%- include('../partials/footer') %>
 <!-- /footer -->
-
-</body>
-</html>
