--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -16,8 +16,19 @@
 
 <div class="container">
     <div class="profile-section">
-        <h1 class="profile-title">Bienvenido a tu sesión: <%= userLogged.fullName %></h1>
+
+        <div id="tittle-logout">
+            <h1 class="profile-title">Tu Perfil</h1>
+            <div class="logout-section">
+            <a href="/users/logout" class="btn btn-danger">Cerrar sesión</a>
+            </div>
+            
+        </div>
         <div class="profile-info">
+            <div class="profile-info-item">
+                <h2 class="profile-info-title">Nombre de usuario:</h2>
+                <p class="profile-info-text"><%= userLogged.fullName %></p>
+            </div>
             <div class="profile-info-item">
                 <h2 class="profile-info-title">ID de usuario:</h2>
                 <p class="profile-info-text"><%= userLogged.id %></p>
@@ -34,11 +45,19 @@
                 <h2 class="profile-info-title">Avatar:</h2>
                 <img class="profile-avatar" src="/images/avatars/<%= userLogged.avatar %>" alt="Avatar">
             </div>
+
+            <div class="create-section">
+                <a href="/products/create" class="btn btn-create">Crear Producto (+)</a>
+            </div>
+
+
+            
         </div>
+
+        
+
     </div>
-    <div class="logout-section">
-        <a href="/users/logout" class="btn btn-danger">Cerrar sesión</a>
-    </div>
+    
 </div>
 
 <!-- ***********************************************************************
