Calibrando img vista detail.ejs

--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -19,7 +19,7 @@
 		<div class="box-izquierda">
 
 			<figure class="product-detail-img">
-					<img src="/images/products/<%= products.image %>" alt="product image" class="product-detail-img">
+					<img src="/images/products/<%= products.image %>" alt="product image" class="product-detail-img" width=100%>
 					</figure>
 			
 		
